[...nextAuth].ts is created

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://admin:admin@myroomdb.tiju4b7.mongodb.net/myroomdb"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
