--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="mongodb+srv://admin:admin@myroomdb.tiju4b7.mongodb.net/myroomdb"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=Ov23liHYVx7g2EtH4y5W
+GITHUB_SECRET=99e5b0d7ec39b2ca498ccc00a7b8422165f61843
