oAuth flow fully implemented

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
 GITHUB_ID=Ov23liHYVx7g2EtH4y5W
 GITHUB_SECRET=99e5b0d7ec39b2ca498ccc00a7b8422165f61843
+
+GOOGLE_CLIENT_ID=61915193922-j8pglnl6ocrspupgim74333b3vdkh18k.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
