--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "leaflet": "^1.9.4",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "query-string": "^9.0.0",
