claudinary package and env variables added, imageUploads interface implemented

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ GITHUB_SECRET=99e5b0d7ec39b2ca498ccc00a7b8422165f61843
 
 GOOGLE_CLIENT_ID=61915193922-j8pglnl6ocrspupgim74333b3vdkh18k.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=djmwdzk5l
+CLOUDINARY_URL=cloudinary://675562717867675:YpB2dXVaJ_fbdZqvybWOA2yqA8g@djmwdzk5l
